--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements/base.txt
+          pip install -r requirements/meka.txt
+          pip install -r requirements/keras.txt
+          pip install -r requirements/test.txt
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
