--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
           pip install -r requirements/base.txt
           pip install -r requirements/meka.txt
           pip install -r requirements/keras.txt
+          pip install -r requirements/gpl.txt
           pip install -r requirements/test.txt
           pip install 'openne @ git+https://github.com/thunlp/OpenNE.git@master#subdirectory=src'
       - name: Lint with flake8
