--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install graph-tool
+        run: apt-get install python3-graph-tool
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -22,7 +24,6 @@ jobs:
           pip install -r requirements/base.txt
           pip install -r requirements/meka.txt
           pip install -r requirements/keras.txt
-          apt-get install python3-graph-tool
           pip install -r requirements/gpl.txt
           pip install -r requirements/test.txt
           pip install 'openne @ git+https://github.com/thunlp/OpenNE.git@master#subdirectory=src'
