--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install graph-tool
+        run:
+          | # https://git.skewed.de/count0/graph-tool/-/wikis/installation-instructions#debian-ubuntu
+          echo "deb [ arch=amd64 ] https://downloads.skewed.de/apt DISTRIBUTION main" >> /etc/apt/sources.list
+          apt-key adv --keyserver keyserver.ubuntu.com --recv-key 612DEFB798507F25
+          sudo apt-get update
+          sudo apt-get install python3-graph-tool
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -22,7 +29,6 @@ jobs:
           pip install -r requirements/base.txt
           pip install -r requirements/meka.txt
           pip install -r requirements/keras.txt
-          sudo apt-get install python3-graph-tool
           pip install -r requirements/gpl.txt
           pip install -r requirements/test.txt
           pip install 'openne @ git+https://github.com/thunlp/OpenNE.git@master#subdirectory=src'
